--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </main>
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Noel Mejia</a>.
+      <a href="https://www.frontendmentor.io/challenges/nft-preview-card-component-SbdUL_w0U" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/Noel3098">Noel Mejia</a>.
     </div>
   </body>
 </html>
